--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,7 @@ asttokens==2.0.5
 backcall==0.2.0
 decorator==5.1.1
 Django==4.0.3
+django-cors-headers==3.11.0
 djangorestframework==3.13.1
 executing==0.8.3
 ipdb==0.13.9
